--- a/src/components/weather-form.css
+++ b/src/components/weather-form.css
@@ -1,34 +1,39 @@
 .weather-form {
   width: 100%;
   max-width: 500px;
-  margin: 10rem auto;
+  margin: 5rem auto;
 }
 
 .weather-form__row {
-  margin-bottom: 3rem;
+  margin-bottom: 6rem;
 }
 
 .weather-form__label {
   width: 100%;
   display: block;
-  font-size: 2 rem;
+  font-size: 30px;
   margin-bottom: 0.2rem;
 }
 
 .weather-form__input {
   width: 100%;
   display: block;
-  padding: 0.5 rem 0.5 rem;
-  background: #03032c;
+  padding: 1rem;
+  background: #0e0402;
   color: white;
-  border: 4px solid #f1abec;
-  font-size: 4 rem;
-  border-radius: 0.5rem;
+  font-size: 20px;
 }
 
 .weather-form__submit {
+  box-shadow: 0px 4px 6px -3px #070201;
+  background-color: #0e0402;
+  border-radius: 31px;
   display: block;
   margin: 0 auto;
-  padding: 0.25 rem 0.25 rem;
-  font-size: 1 rem;
+  cursor: cell;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 20px 46px;
+  text-decoration: none;
+  text-shadow: 0px 0px 0px #302b2a;
 }
